<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="#cdc0b0" 
	android:layout_width="fill_parent"    
	android:layout_height="fill_parent">
	<TextView
		android:id="@+id/support"
		android:text="@string/support"
		android:textColor="#000000"
		android:textSize="12pt" 
		android:layout_centerHorizontal="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		/>
	<TextView
		android:id="@+id/FAQ"
		android:text="@string/FAQ"
		android:textColor="#000000"
		android:textSize="10pt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="left"
		android:layout_below="@id/support"
		android:paddingLeft="10dp"
		/>
	<TextView
		android:id="@+id/FAQ_web"
		android:text="@string/FAQ_web"
		android:autoLink="web"
		android:textColor="#000000"
		android:textSize="8pt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_below="@id/FAQ"
		android:paddingLeft="10dp"		
		/>
	<TextView
		android:id="@+id/tech_support"
		android:text="@string/tech_support"
		android:textColor="#000000"
		android:textSize="10pt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/FAQ_web"
		android:paddingLeft="10dp"		
		/>
	<TextView
		android:id="@+id/tech_support_web"
		android:text="@string/tech_support_web"
		android:autoLink="web"
		android:textColor="#000000"
		android:textSize="8pt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/tech_support"
		android:paddingLeft="10dp"		
		/>
	<TextView
		android:id="@+id/map_support"
		android:text="@string/map_support"
		android:textColor="#000000"
		android:textSize="10pt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/tech_support_web"
		android:paddingLeft="10dp"		
		/>
	<TextView
		android:id="@+id/map_support_web"
		android:text="@string/map_support_web"
		android:autoLink="web"
		android:textColor="#000000"
		android:textSize="8pt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/map_support"
		android:paddingLeft="10dp"		
		/>
</RelativeLayout>