<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="#cdc0b0"  
	android:layout_width="fill_parent"    
	android:layout_height="fill_parent">
	<TextView
		android:id="@+id/information"
		android:text="@string/info"
		android:textColor="#000000"
		android:textSize="12pt"
		android:layout_centerHorizontal="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	/>
	<ImageView
		android:id="@+id/nplogo"
		android:layout_width="50px"
		android:layout_height="50px"
		android:src="@drawable/nplogo" 
		android:layout_below="@id/information"
		android:paddingLeft="10dp"		
	/>
	<TextView
		android:id="@+id/npcs"
		android:text="@string/npcs"
		android:textSize="8pt"
		android:textColor="#000000"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toRightOf="@id/nplogo"
		android:layout_below="@id/information"
		android:paddingLeft="10dp"		
	/>
	<TextView
		android:id="@+id/npcs_website"
		android:text="@string/npcs_website"
		android:textSize="8pt"
		android:autoLink="web"
		android:textColor="#000000"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/npcs"
		android:paddingLeft="75px"
	/>
</RelativeLayout>